--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bluebird": "^3.4.6",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "currency-formatter": "^1.0.4",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
