--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "body-parser": "~1.13.2",
+    "connect-redis": "^3.1.0",
     "cookie-parser": "~1.3.5",
     "currency-formatter": "^1.0.4",
     "debug": "~2.2.0",
