--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.2",
     "jade": "~1.11.0",
     "lodash": "^4.16.1",
     "moment": "^2.15.0",
