--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "body-parser": "~1.13.2",
     "connect-redis": "^3.1.0",
     "cookie-parser": "~1.3.5",
+    "csv-parser": "^1.11.0",
     "currency-formatter": "^1.0.4",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
+    "fs": "0.0.1-security",
     "jade": "~1.11.0",
     "lodash": "^4.16.1",
     "moment": "^2.15.0",
     "morgan": "~1.6.1",
+    "multer": "^1.3.0",
+    "neat-csv": "^2.1.0",
     "promise-mysql": "^1.3.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "tablesorter": "^2.28.4"
   }
 }
