--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.13.2",
     "connect-redis": "^3.1.0",
     "cookie-parser": "~1.3.5",
+    "crypto": "^1.0.1",
     "csv-parser": "^1.11.0",
     "currency-formatter": "^1.0.4",
     "debug": "~2.2.0",
