--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.14.2",
     "fs": "0.0.1-security",
+    "html-table-to-csv": "^1.1.0",
     "jade": "~1.11.0",
     "lodash": "^4.16.1",
     "moment": "^2.15.0",
     "morgan": "~1.6.1",
     "multer": "^1.3.0",
     "neat-csv": "^2.1.0",
+    "node-table-to-csv": "^0.1.0",
     "promise-mysql": "^1.3.2",
     "serve-favicon": "~2.3.0",
     "tablesorter": "^2.28.4"
